# cosmic-ext-ip-applet

./: Cargo.toml  README.md  install.sh  uninstall.sh
data/: io.github.Pontus-Ottosson.CosmicIpApplet.desktop
src/: config.rs  main.rs
