[package]
name = "cosmic-ip-applet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmic-ip-applet"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet", "tokio", "wayland"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
if-addrs = "0.13"

[profile.release]
opt-level = "s"
lto = true
